static/css/cards-view.css
.card-container {
    padding-top : 20px;
}

#no-result-text {
    margin: 100px;

    text-align: center;

    font-size: 3vw;
    color: darkgrey;
}

.card {
    margin-bottom: 3%;
}

.card img {
    width: 100%;
}

.card img:hover {
    border: 4px solid dodgerblue;
    border-radius: 10px;

    cursor: pointer;
}

#card-details {
    width: 33%;
    height: 100%;

    position: fixed;
    right: 0;

    padding: 20px 20px 70px;

    background-color: #E0DDC5;

    border-left: 1px solid black;

    overflow: auto;
}

#card-details > .row {
    margin-top: 3px;
    margin-bottom: 3px;
}

#card-details > h2 {
    text-align: center;
    margin-bottom: 15px;
}

#card-details-upper {
    margin-bottom: 30px;
}

#card-details-lower > div {
    margin-top: 2px;
    margin-bottom: 2px;
}

.strip {
    width: 70%;
    height: 10%;
    background-color: #2AAFCE;
    -webkit-transform:
            rotate(45deg)
            translateX(28%)
            translateY(-10%);
    position: absolute;
    top: 0;
    right: 0;
}

.strip-values {
    position: absolute;
    top: 10%;
    right: 17%;
    font-size: 1vw;
    color: white;
    z-index: 10;
}

.card-inner {
    position: relative;
    overflow: hidden;
}

